# discordbot-goberly

./: CMakeLists.txt  README.MD  build.gradle.kts  settings.gradle.kts
src/: main.cpp
src/main/kotlin/com/goberly/: Main.kt
src/main/kotlin/com/goberly/system/: OnReady.kt
src/main/kotlin/com/goberly/system/messages/: Handbuch.kt  PreisAlarm.kt  TwitterPush.kt  Welcome.kt
src/main/kotlin/com/goberly/system/utils/: Helper.kt
